...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Date -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dateOfAcquisitionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/calendar_month"
                android:drawablePadding="8dp"
                android:text="@string/date_of_purchase_placeholder" />

            <!-- Make -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/makeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/make"
                android:drawablePadding="8dp"
                android:text="@string/make_placeholder" />

            <!-- Model -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/modelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/model"
                android:drawablePadding="8dp"
                android:text="@string/model_placeholder" />

            <!-- Serial Number -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/serialNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/barcode"
                android:drawablePadding="8dp"
                android:text="@string/serial_number_placeholder" />

            <!-- Value -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/estimatedValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/value"
                android:drawablePadding="8dp"
                android:text="@string/estimated_value_placeholder" />

            <!-- Comment -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/commentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/comment"
                android:drawablePadding="8dp"
                android:text="@string/comment_placeholder" />

            <!-- Description -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/briefDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/info"
                android:drawablePadding="8dp"
                android:text="@string/description_placeholder" />

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagTextView"
        app:strokeWidth="2dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- add tags through code -->

        </com.google.android.material.chip.ChipGroup>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
