...
                android:id="@+id/usernameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email Input -->
            <com.google.android.material.textfield.TextInputLayout
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Input -->
            <com.google.android.material.textfield.TextInputLayout
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
...
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:text="Don't have an account? Sign up"/>

            <!-- Login Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:layout_marginTop="24dp"
                app:backgroundTint="@color/green"/>

...

            <!-- Create Account Button -->
<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:id="@+id/createAccountButton"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Create Account"-->
<!--                android:layout_marginTop="16dp"/>-->

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
...
